site/content/docs/5.3/customize/css-variables.md
---
layout: docs
title: CSS переменные
description: Используйте настраиваемые свойства CSS Bootstrap для быстрого и перспективного проектирования и разработки.
group: customize
toc: true
---

Bootstrap включает множество [настраиваемых свойств (переменных) CSS](https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties) в свой скомпилированный CSS для настройки в реальном времени без необходимости перекомпилировать Sass. Они обеспечивают легкий доступ к часто используемым значениям, таким как цвета нашей темы, контрольные точки и стеки основных шрифтов, при работе в инспекторе браузера, в изолированной программной среде или при общем прототипировании.

**Все наши настраиваемые свойства имеют префикс `bs-`**, чтобы избежать конфликтов со сторонним CSS.

## Корневые переменные

Вот переменные, которые мы включаем (обратите внимание, что требуется `:root`), к которым можно получить доступ везде, где загружен CSS Bootstrap. Они находятся в нашем файле `_root.scss` и включены в наши скомпилированные файлы dist.

### По умолчанию

Эти переменные CSS доступны везде, независимо от цветового режима.

```css
{{< root.inline >}}
{{- $css := readFile "dist/css/bootstrap.css" -}}
{{- $match := findRE `:root,\n\[data-bs-theme=light\] {([^}]*)}` $css 1 -}}

{{- if (eq (len $match) 0) -}}
{{- errorf "Got no matches for :root in %q!" $.Page.Path -}}
{{- end -}}

{{- index $match 0 -}}

{{< /root.inline >}}
```

### Темный режим

Эти переменные привязаны к нашему встроенному темному режиму.

```css
{{< root.inline >}}
{{- $css := readFile "dist/css/bootstrap.css" -}}
{{- $match := findRE `\[data-bs-theme=dark\] {([^}]*)}` $css 1 -}}
{{- if (eq (len $match) 0) -}}
{{- errorf "Got no matches for [data-bs-theme=dark] in %q!" $.Page.Path -}}
{{- end -}}
{{- index $match 0 -}}
{{< /root.inline >}}
```

## Переменные компонента

Bootstrap 5 все чаще использует пользовательские свойства в качестве локальных переменных для различных компонентов. Таким образом мы уменьшаем наш скомпилированный CSS, гарантируем, что стили не наследуются в таких местах, как вложенные таблицы, и допускаем некоторые базовые изменения стиля и расширения компонентов Bootstrap после компиляции Sass.

Взгляните на нашу документацию по таблицам, чтобы узнать, как мы используем переменные CSS]({{< docsref "/content/tables#how-do-the-variants-and-accented-tables-work" >}}). Наши [панели навигации также используют переменные CSS]({{< docsref "/components/navbar#css" >}}) начиная с версии 5.2.0. Мы также используем переменные CSS в наших сетках — в первую очередь для отступов — [новая CSS-сетка с опционом]({{< docsref "/layout/css-grid" >}}) — с более широким использованием компонентов в будущем.

По возможности мы будем назначать переменные CSS на уровне базового компонента (например, `.navbar` для панели навигации и ее подкомпонентов). Это уменьшает количество предположений о том, где и как настраивать, и позволяет нашей команде легко вносить изменения в будущих обновлениях.

## Префикс

Большинство переменных CSS используют префикс, чтобы избежать конфликтов с вашей собственной кодовой базой. Этот префикс является дополнением к `--`, который требуется для каждой переменной CSS.

Настройте префикс с помощью переменной Sass `$prefix`. По умолчанию установлено значение `bs-` (обратите внимание на тире в конце).

## Примеры

Переменные CSS предлагают такую же гибкость, что и переменные Sass, но без необходимости компиляции перед отправкой в браузер. Например, здесь мы сбрасываем шрифт нашей страницы и стили ссылок с помощью переменных CSS.

```css
body {
  font: 1rem/1.5 var(--bs-font-sans-serif);
}
a {
  color: var(--bs-blue);
}
```

## Переменные фокуса

{{< added-in "5.3.0" >}}

Bootstrap предоставляет настраиваемые стили `:focus`, используя комбинацию переменных Sass и CSS, которые можно дополнительно добавлять к определенным компонентам и элементам. Мы пока не переопределяем глобально все стили `:focus`.

В нашем Sass мы устанавливаем значения по умолчанию, которые можно настроить перед компиляцией.

{{< scss-docs name="focus-ring-variables" file="scss/_variables.scss" >}}

Затем эти переменные переназначаются на переменные CSS уровня `:root`, которые можно настраивать в режиме реального времени, в том числе с параметрами смещения `x` и `y` (которые по умолчанию имеют резервное значение `0`).

{{< scss-docs name="root-focus-variables" file="scss/_root.scss" >}}

## Контрольные точки сетки

Хотя мы включаем контрольные точки нашей сетки как переменные CSS (кроме `xs`), имейте в виду, что **переменные CSS не работают в медиа-запросах**. Это предусмотрено спецификацией CSS для переменных, но может измениться в ближайшие годы с поддержкой переменных `env()`. Ознакомьтесь с [этим ответом на Stack Overflow](https://stackoverflow.com/a/47212942) для некоторых полезных ссылок. Между тем, вы можете использовать эти переменные в других ситуациях CSS, а также в своем JavaScript.
